# collusion-resistant-zktls-cosnark

./: .gitignore  .gitmodules  Cargo.toml  README.md  fulltest.sh  quicktest.sh  run.sh  run_wan_tables.sh  wan_compare.sh
collaborative-zksnark-main/curves/ed_on_bn254/: Cargo.toml
collaborative-zksnark-main/curves/ed_on_bw6_761/: Cargo.toml
collaborative-zksnark-main/curves/ed_on_cp6_782/: Cargo.toml
collaborative-zksnark-main/curves/ed_on_mnt4_298/: Cargo.toml
collaborative-zksnark-main/curves/ed_on_mnt4_753/: Cargo.toml
collaborative-zksnark-main/curves/pallas/: Cargo.toml
collaborative-zksnark-main/curves/vesta/: Cargo.toml
collaborative-zksnark-main/mpc-algebra/: Cargo.toml
collaborative-zksnark-main/mpc-algebra/src/wire/: pairing.rs
collaborative-zksnark-main/r1cs-std/src/groups/curves/short_weierstrass/: non_zero_affine.rs
collaborative-zksnark-main/r1cs-std/src/groups/curves/short_weierstrass/mnt4/: mod.rs
collaborative-zksnark-main/r1cs-std/src/groups/curves/short_weierstrass/mnt6/: mod.rs
contracts/cache/: solidity-files-cache.json  test-failures
contracts/src/: DctlsVerifier.sol  FrostVerifier.sol
contracts/test/: DctlsVerifier.t.sol  FrostVerifier.t.sol
crates/attestation/: Cargo.toml
crates/attestation/src/: dctls.rs  deco_dx_dctls.rs  distefano_dx_dctls.rs  engine.rs  envelope.rs  error.rs  lib.rs  onchain.rs  onchain_secp256k1.rs  rc_phase.rs  session.rs  statement.rs  tls12_session.rs  tls_2pc.rs  tls_engine.rs  verify.rs  zk_backend.rs
crates/bench/: Cargo.toml
crates/co-snark-prover/: Cargo.toml
crates/co-snark-prover/src/: circuit.rs  hmac_sha256.rs  main.rs  mpc_prover.rs  sha256_gadget.rs  tls_prf_circuit.rs  types.rs
crates/co-snark-prover/src/mpc_groth/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  hash.rs  ids.rs  lib.rs  types.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: dkg.rs  dkg_announce.rs  dkg_encrypt.rs  dkg_secp256k1.rs  dvrf.rs  dvrf_secp256k1.rs  error.rs  frost_adapter.rs  frost_secp256k1_adapter.rs  lib.rs  participant_registry.rs  randomness.rs  threshold.rs  transcript.rs
crates/hsp-2pc/: Cargo.toml
crates/hsp-2pc/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: codec.rs  error.rs  lib.rs  messages.rs  mtls.rs  signed_envelope.rs  transport.rs
crates/node/: Cargo.toml
crates/node/src/: auth.rs  auxiliary.rs  coordinator.rs  dkg_node.rs  error.rs  frost_aux.rs  handshake_binding.rs  lib.rs  transport.rs
crates/pgp/: Cargo.toml
crates/pgp/src/: aes128_gadget.rs  binding.rs  hmac_sha256_gadget.rs  lib.rs  mac_then_encrypt.rs  sha256_gadget.rs
crates/runner/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  memory.rs  sqlite.rs  traits.rs
crates/testing/: Cargo.toml
crates/testing/src/: fixtures.rs  lib.rs
crates/testing/tests/: adversarial.rs  auth_transport.rs  dctls_tests.rs  dkg.rs  dvrf_tests.rs  frost_distributed.rs  frost_integration.rs  frost_registry.rs  handshake_2pc.rs  integration.rs  mtls_transport.rs  participant_registry.rs  pipeline.rs  replay.rs  tamper.rs  tcp_transport.rs
crates/zk/: Cargo.toml
crates/zk/src/: backend.rs  circuit.rs  co_snark.rs  co_snark_distributed.rs  co_snark_split.rs  lib.rs  mac_then_encrypt.rs  mimc.rs  tls12_hmac.rs  tls_prf_circuit.rs  tls_session_binding.rs  vk_export.rs
