[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto",
    "crates/attestation",
    "crates/network",
    "crates/node",
    "crates/storage",
    "crates/testing",
    "crates/zk",
    "crates/bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
sha3 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
# DKG Round-2 wire confidentiality (feature-gated via tls-attestation-crypto/frost)
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"

# IDs
uuid = { version = "1.6", features = ["v4"] }

# TLS (Layer 1 — real TLS connections for TlsAttestationEngine)
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
rcgen = { version = "0.14", features = ["ring", "x509-parser"] }

# Async runtime (only used in node/api crates)
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.4"

# FROST threshold signatures — secp256k1 (EVM-compatible, paper §IX)
frost-secp256k1-evm = { version = "3.0.0", features = ["serde"] }
# k256 for raw secp256k1 point operations (DDH-DVRF)
k256 = { version = "0.13", features = ["arithmetic", "ecdsa"] }

# ZK / SNARK (arkworks ecosystem — Groth16 on BN254)
ark-ff                = { version = "0.4", default-features = false }
ark-ec                = { version = "0.4", default-features = false }
ark-bn254             = { version = "0.4", default-features = false }
ark-groth16           = { version = "0.4", default-features = false, features = ["r1cs"] }
ark-r1cs-std          = { version = "0.4", default-features = false }
ark-relations         = { version = "0.4", default-features = false }
ark-serialize         = { version = "0.4", default-features = false, features = ["derive"] }
ark-std               = { version = "0.4", default-features = false }
ark-crypto-primitives = { version = "0.4", default-features = false, features = ["snark"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compile in dev; keep debug assertions
opt-level = 0
