[package]
name = "tls-attestation-core"
description = "Core domain types, identifiers, hashing, and error taxonomy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
rand.workspace = true
