[package]
name = "pgp"
version = "0.1.0"
edition = "2021"
description = "Mac-then-Encrypt Groth16 PGP proof (BN254), reused from the co-SNARK repo, DVRF/TSS removed."

[dependencies]
ark-ff        = { version = "0.4", default-features = false, features = ["std"] }
ark-ec        = { version = "0.4", default-features = false, features = ["std"] }
ark-bn254     = { version = "0.4", default-features = false, features = ["std", "curve", "scalar_field"] }
ark-groth16   = { version = "0.4", default-features = false, features = ["std", "r1cs"] }
ark-r1cs-std  = { version = "0.4", default-features = false, features = ["std"] }
ark-relations = { version = "0.4", default-features = false, features = ["std"] }
ark-serialize = { version = "0.4", default-features = false, features = ["std", "derive"] }
ark-std       = { version = "0.4", default-features = false, features = ["std"] }
ark-crypto-primitives = { version = "0.4", default-features = false, features = ["std", "snark"] }
thiserror     = "1.0"
sha2          = "0.10"
rand_core     = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
hmac = "0.12"
