[package]
name = "tls-attestation-zk"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
tls-attestation-core        = { path = "../core" }
tls-attestation-attestation = { path = "../attestation" }

ark-ff        = { workspace = true, features = ["std"] }
ark-ec        = { workspace = true, features = ["std"] }
ark-bn254     = { workspace = true, features = ["std", "curve", "scalar_field"] }
ark-groth16   = { workspace = true, features = ["std", "r1cs"] }
ark-r1cs-std  = { workspace = true, features = ["std"] }
ark-relations = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["std"] }
ark-std       = { workspace = true, features = ["std"] }
ark-crypto-primitives = { workspace = true, features = ["std", "snark"] }

sha2.workspace         = true
hmac.workspace         = true
x25519-dalek.workspace = true
rand.workspace         = true
rand_core.workspace    = true
zeroize.workspace      = true
thiserror.workspace    = true
serde.workspace        = true
serde_json.workspace   = true
hex.workspace          = true